Archive2/17/d651745be1b83c/output
main.cpp: In function 'int main()':
main.cpp:9:11: error: 'align' is not a member of 'std'
   while ( std::align(alignof(int),sizeof(char),pt,space) ) {
           ^
